# Uplink

./: .coderabbit.yaml  .env  .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  .scss-lint.yml  Cargo.toml  Config.toml  LICENSE  LICENSE.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  add_missing_keys.py  assistant.sh  build.rs  build_linux_installer.sh  launch_docker.sh  macos-install_dependencies.sh  quick_build.sh  sample.rs  tailwind.config.js
common/: Cargo.toml
common/locales/bs-BA/: bs-BA.ftl
common/locales/de/: main.ftl
common/locales/en-US/: main.ftl
common/locales/es-MX/: main.ftl
common/locales/hr-HR/: hr-HR.ftl
common/locales/pl/: pl.ftl
common/locales/pt-BR/: main.ftl
common/locales/pt-PT/: main.ftl
common/locales/sr-RS/: sr-RS.ftl
common/src/: config.rs  lib.rs  notifications.rs  profile_update_channel.rs  sounds.rs  upload_file_channel.rs
common/src/icons/: mod.rs
common/src/language/: mod.rs
common/src/state/: account.rs  action.rs  call.rs  chats.rs  configuration.rs  data_transfer.rs  default_keybinds.rs  friends.rs  identity.rs  local_state.rs  mod.rs  notifications.rs  pending_message.rs  route.rs  scope_ids.rs  settings.rs  storage.rs  ui.rs  utils.rs
common/src/state/chats2/: chat_behavior.rs  mod.rs  view_behavior.rs
common/src/testing/: mock.rs
common/src/utils/: clear_temp_files_dir.rs  img_dimensions_preview.rs  lifecycle.rs  local_file_path.rs  mod.rs  treat_paths_to_load_local_files.rs
common/src/utils/clipboard/: download_file_for_better_preview.rs
common/src/warp_runner/: conv_stream.rs  mod.rs
common/src/warp_runner/data/: mod.rs
common/src/warp_runner/manager/: events.rs  mod.rs
common/src/warp_runner/ui_adapter/: blink_event.rs  message_event.rs  mod.rs  multipass_event.rs  raygun_event.rs
extension_example/: Cargo.toml
extension_example/src/: lib.rs  style.css
extension_example2/: Cargo.toml
extension_example2/src/: lib.rs
extensions/: Cargo.toml
extensions/src/: api.rs  lib.rs
icons/: Cargo.toml  build.rs
icons/src/: lib.rs  outline.rs  solid.rs
kit/: Cargo.toml
kit/src/: compiled_styles.css  lib.rs  style.scss
kit/src/components/: mod.rs
kit/src/components/channel/: mod.rs  style.scss
kit/src/components/channel_group/: mod.rs  style.scss
kit/src/components/community/: mod.rs
kit/src/components/context_menu/: context.js  mod.rs  style.scss
kit/src/elements/: mod.rs
kit/src/icons/: mod.rs
kit/src/layout/: mod.rs
native_extensions/clear_all/: Cargo.toml
native_extensions/clear_all/src/: lib.rs
native_extensions/emoji_selector/: Cargo.toml
native_extensions/emoji_selector/src/: emojis.toml  lib.rs  style.css
playground/: Cargo.toml
playground/src/: main.rs  style.css  styles.css
shared/: Cargo.toml
shared/locales/en-US/: main.ftl
shared/locales/es-MX/: main.ftl
shared/locales/pt-BR/: main.ftl
shared/locales/pt-PT/: main.ftl
shared/src/: lib.rs
shared/src/language/: mod.rs
shared/src/state/: mod.rs  notifications.rs
ui/: Cargo.toml  Config.toml  README.md  build.rs  todo.md
ui/deb-config/DEBIAN/: control  postinst
ui/deb/DEBIAN/: control
ui/docs/: common-patterns.md
ui/docs/testing/: uplink-checklist.md
ui/extra/: entitlements.plist
ui/extra/linux/: im.satellite.uplink.metainfo.xml
ui/extra/themes/: carbon.css  contrast.scss  default.scss  draculish.scss  example.scss  green.scss  light.scss  lunar-eclipse.css  pink.scss  polar.scss
ui/locales/en-US/: main.ftl
ui/locales/pt-BR/: main.ftl
ui/locales/pt-PT/: main.ftl
ui/src/: auth_guard.rs  bootstrap.rs  compiled_styles.css  config.rs  lib.rs  main.rs  misc_scripts 2.rs  misc_scripts.rs  open-dyslexic.css  prism_paths.rs  state.rs  style.scss  warp.rs  warp_runner.rs  webview_config.rs  window_builder.rs
ui/src/components/: README.md  mod.rs  style.scss
ui/src/extension_browser/: extensions.scss  mod.rs
ui/src/extensions/: browser.rs  extensions.scss  mod.rs
ui/src/layouts/: README.md  auth.rs  chat.rs  create_account.rs  create_group.rs  drag.js  file_preview.rs  files.rs  friends.rs  loading.rs  mod.rs  settings.rs  slimbar.rs  storage.js  storage.rs  style.scss  unlock.rs
ui/src/logger/: logger.rs  logger_debug.rs  mod.rs  style.scss
ui/src/overlay/: mod.rs  style.css
ui/src/state/: account.rs  action.rs  chats.rs  configuration.rs  friends.rs  items.rs  mod.rs  notifications.rs  storage.rs  ui.rs
ui/src/testing/: mock.rs
ui/src/utils/: async_task_queue.rs  auto_updater.rs  clip_code.swift  clipboard.rs  clipboard_data.rs  download.rs  drag_and_drop_files.rs  format_timestamp.rs  get_drag_event.rs  get_font_sizes.rs  keyboard.rs  language.rs  lifecycle.rs  macos_clipboard.rs  mod.rs  notifications.rs  sounds.rs  themes.rs  verify_valid_paths.rs
ui/src/warp_runner/: commands.rs  conv_stream.rs  conversation_streams.rs  mod.rs
ui/src/window_manager/: mod.rs
ui/wix/: main.wxs
ui_kit/: Cargo.toml  build.rs
ui_kit/src/: compiled_styles.css  lib.rs  style.css  style.scss  styles.css  tailwind.css
ui_kit/src/button/: mod.rs  styles.css
ui_kit/src/components/: mod.rs
ui_kit/src/elements/: mod.rs
ui_kit/src/icons/: mod.rs
ui_kit/src/layout/: mod.rs
ui_kit/src/switch/: mod.rs  style.css
ui_kit/src/tooltip/: mod.rs  style.css  styles.css
uplink/: todo.md  (+1 more)
uplink_skeleton/: Cargo.toml  build.rs  state.json
uplink_skeleton/docs/: getting-started.md
uplink_skeleton/docs/testing/: uplink-checklist.md
uplink_skeleton/extra/linux/: im.satellite.uplink.desktop
uplink_skeleton/locales/en-US/: main.ftl
uplink_skeleton/locales/pt-BR/: main.ftl
uplink_skeleton/src/: compiled_styles.css  config.rs  main.rs  mock.rs  mock_state.rs  state.rs  store.rs  style.css  style.scss
uplink_skeleton/src/components/: README.md  mod.rs  style.scss
uplink_skeleton/src/layouts/: README.md  chat.rs  files.rs  friends.rs  mod.rs  settings.rs  style.css  style.scss
uplink_skeleton/src/pages/: chat.rs  settings.rs  style.css  style.scss
uplink_skeleton/src/testing/: mock.rs
uplink_skeleton/src/utils/: config.rs  language.rs  notifications.rs
(+650 files in other folders)
