[workspace]
members = [
    "kit",
    "ui",
    "icons",
    "common",
    "extensions",
    "native_extensions/emoji_selector",
]

resolver = "2"

[profile.rapid]
inherits = "dev"
opt-level = 2
incremental = true
overflow-checks = false
lto = "thin"
panic = "unwind"
codegen-units = 32

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[workspace.package]
version = "0.2.4"
rust-version = "1.75"

[workspace.dependencies]
dioxus = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
dioxus-hooks = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
dioxus-html = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
dioxus-router = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
dioxus-desktop = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2", features = [
    "transparent",
] }
muda = "0.9.4"
raw-window-handle = "0.5"
dioxus-core = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
fermi = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
tokio-util = { version = "0.7", features = ["full"] }
arboard = "3.2"
humansize = "2.1.3"
uuid = { version = "1", features = ["serde", "v4"] }
libloading = "0.7.4"
warp = { git = "https://github.com/Satellite-im/Warp", rev = "d15be5735c5e654bbb7b424d0ea2c414df8b5e4c" }
warp-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "d15be5735c5e654bbb7b424d0ea2c414df8b5e4c" }
warp-blink-wrtc = { git = "https://github.com/Satellite-im/Warp", rev = "d15be5735c5e654bbb7b424d0ea2c414df8b5e4c" }
rfd = "0.11.3"
mime = "0.3.16"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
either = "1"
base64 = "0.20.0"
timeago = "0.4.0"
dirs = "4.0.0"
regex = "1.6.1"
opener = "0.5.0"
open = "3.2.0"
derive_more = "0.99"
colored = "2.0.0"
notify = "5.1.0"
rand = "0.8"
notify-rust = { version = "4.6.0", default-features = false, features = ["d"] }
titlecase = "2.2.1"
log = { version = "0.4.17", features = ["std"] }

tempfile = "3.0.7"
fdlimit = "0.2"

once_cell = "1.17"
parking_lot = { version = "0.12" }
tracing = { version = "0.1" }
tracing-futures = { version = "0.2" }

futures = "0.3"
tokio = { version = "1", features = ["full"] }
isolang = "2.2.0"
clap = { version = "4.1", features = ["derive"] }
fs_extra = "1.3"
walkdir = "2"
zip = "0.6.4"

image = "0.24"
linkify = "0.9.0"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
select = "0.6.0"

common = { path = "common" }
extensions = { path = "extensions" }
kit = { path = "kit" }
icons = { path = "icons" }
