[workspace]
members = [
    "kit",
    "ui",
    "icons",
    "common",
    "extensions",
    "native_extensions/emoji_selector",
]

resolver = "2"

[profile.rapid]
inherits = "dev"
opt-level = 2
incremental = true
overflow-checks = false
lto = "thin"
panic = "unwind"
codegen-units = 32

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[workspace.package]
version = "0.2.5"
rust-version = "1.75"

[workspace.dependencies]
dioxus = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
dioxus-hooks = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
dioxus-html = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
dioxus-router = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
dioxus-desktop = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2", features = [
    "transparent",
] }
muda = "0.9.4"
dioxus-core = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
arboard = "3.3"
humansize = "2.1.3"
uuid = { version = "1", features = ["serde", "v4"] }
libloading = "0.8.3"
warp = { git = "https://github.com/Satellite-im/Warp", rev = "b574da4ab10cfd7bf38ec0e2b499232a2e8f8eff" }
warp-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "b574da4ab10cfd7bf38ec0e2b499232a2e8f8eff" }
warp-blink-wrtc = { git = "https://github.com/Satellite-im/Warp", rev = "b574da4ab10cfd7bf38ec0e2b499232a2e8f8eff" }
rfd = "0.14.0"
mime = "0.3.17"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
base64 = "0.22.0"
timeago = "0.4.2"
dirs = "5.0.1"
regex = "1.10.3"
opener = "0.6.1"
open = "5.1.2"
derive_more = "0.99"
colored = "2.1.0"
notify = "6.1.1"
rand = "0.8"
notify-rust = { version = "4.10.0", default-features = false, features = ["d"] }
titlecase = "2.2.1"
log = { version = "0.4.21", features = ["std"] }

tempfile = "3.10.1"
fdlimit = "0.3.0"

once_cell = "1.19"
parking_lot = { version = "0.12" }
tracing = { version = "0.1" }

futures = "0.3"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
] }
isolang = "2.4.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2"
zip = "0.6.6"

image = "0.25.0"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
select = "0.6.0"

common = { path = "common" }
extensions = { path = "extensions" }
kit = { path = "kit" }
icons = { path = "icons" }
