[package]
name = "common"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unic-langid = "0.9.1"
isolang.workspace = true
fluent-templates = "0.8.0"
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
clap.workspace = true
rodio = "0.16"
uuid.workspace = true
notify-rust.workspace = true
dirs.workspace = true
base64.workspace = true
timeago.workspace = true
lipsum = "0.8.2"
chrono.workspace = true
rand.workspace = true
image = "0.24.5"
names = "0.14.0"
titlecase.workspace = true
substring = "1.4.5"
icons = { path = "../icons" }
humansize.workspace = true
zip = "0.6.4"
walkdir.workspace = true
extensions.workspace = true

futures.workspace = true
# do we really want to pull in all of tokio? 
tokio.workspace = true
tokio-util.workspace = true

mime.workspace = true
tempfile.workspace = true

warp.workspace = true
warp-mp-ipfs.workspace = true
warp-rg-ipfs.workspace = true
warp-fs-ipfs.workspace = true


dioxus.workspace = true
dioxus-desktop = { workspace = true, features = [
    "transparent",
] }
derive_more.workspace = true
either.workspace = true
wry.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"
core-foundation = "0.9.3"
