[package]
name = "common"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
unic-langid = "0.9.1"
fluent-templates = "0.8.0"
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
clap = { workspace = true }
rodio = "0.17"
uuid = { workspace = true }
notify-rust = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
lipsum = "0.9"
chrono = { workspace = true }
rand = { workspace = true }
image = { workspace = true }
names = "0.14.0"
titlecase = { workspace = true }
substring = "1.4.5"
plot_icon = "0.3.0"
icons = { workspace = true }
humansize = { workspace = true }
zip = "0.6.4"
walkdir = { workspace = true }
extensions = { workspace = true }

futures = { workspace = true }
# do we really want to pull in all of tokio?
tokio = { workspace = true }
tokio-util = { workspace = true }

tempfile = { workspace = true }

warp = { workspace = true }
warp-ipfs = { workspace = true }
warp-blink-wrtc = { workspace = true }


dioxus = { workspace = true }
dioxus-desktop = { workspace = true, features = ["transparent"] }
derive_more = { workspace = true }
either = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2.7"
core-foundation = "0.9.3"
mac-notification-sys = "0.6"

[target.'cfg(target_env = "msvc")'.dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Foundation_Collections",
    "Win32_System_SystemInformation",
    "Data_Xml_Dom",
    "UI_Notifications",
]

[target.'cfg(target_env = "gnu")'.dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Foundation_Collections",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Data_Xml_Dom",
    "UI_Notifications",
]

[features]
production_mode = []
