[package]
name = "extension_example"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = { workspace = true }
common = { path = "../common" }
extensions = { path = "../extensions" }
kit = { path = "../kit" }
once_cell = "1.17.1"