[package]
name = "extensions"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus.workspace = true
libloading.workspace = true
derive_more.workspace = true

ipc-channel = "0.16.0"

[build-dependencies]
rustc_version = "0.4.0"
