[package]
name = "extensions"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { workspace = true }
libloading = { workspace = true }

[build-dependencies]
rustc_version = "0.4.0"