[package]
name = "kit"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
dioxus.workspace = true
dioxus-core = { workspace = true }
dioxus-desktop = { workspace = true, features = ["transparent"] }
dioxus-hooks.workspace = true
dioxus-html.workspace = true
timeago.workspace = true
humansize.workspace = true
common = { path = "../common" }

warp.workspace = true

derive_more.workspace = true

[dependencies.uuid]
workspace = true
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
glob = "0.3.0"
rsass = "0.26.0"
