[package]
name = "kit"
rust-version = { workspace = true }
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
scraper = "0.19.0"
chrono = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dioxus-core = { workspace = true }
dioxus-desktop = { workspace = true, features = ["transparent"] }
dioxus-hooks = { workspace = true }
dioxus-html = { workspace = true }
arboard = { workspace = true }
timeago = { workspace = true }
humansize = { workspace = true }
common = { workspace = true }
warp = { workspace = true }
derive_more = { workspace = true }
pulldown-cmark = "0.10.0"
reqwest = { workspace = true }
base64 = { workspace = true }
mime = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
emojis = "0.6.1"
unic-segment = "0.9"
unic-emoji-char = "0.9"
tracing = { workspace = true }

[dependencies.uuid]
workspace = true
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
glob = "0.3.1"
rsass = "0.28.8"

[lib]
doctest = false
