[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git="https://github.com/DioxusLabs/dioxus", branch = "master" }
dioxus-core = { git="https://github.com/DioxusLabs/dioxus", branch = "master" }
dioxus-desktop = { git="https://github.com/DioxusLabs/dioxus", branch = "master" }
ui-kit = { path = "../ui_kit" }
