[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev="d521da1991719760e271457dfe4f9ddf281afbb3" }
dioxus-hooks = { git = "https://github.com/DioxusLabs/dioxus", rev="d521da1991719760e271457dfe4f9ddf281afbb3" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus", rev="d521da1991719760e271457dfe4f9ddf281afbb3" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev="d521da1991719760e271457dfe4f9ddf281afbb3", features = ["transparent"] }
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus", rev="d521da1991719760e271457dfe4f9ddf281afbb3" }
fermi = { git = "https://github.com/DioxusLabs/dioxus", rev = "22e71a71bdcdc03c3ae83ae1c3b3fb5417ebaa80" }
kit = { path = "../kit" }
shared = { path = "../shared" }
extensions = { path = "../extensions" }
tokio-util = { version = "0.7", features = ["full"] }
arboard = "3.1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
lipsum = "0.8.2"
warp = { git = "https://github.com/Satellite-im/Warp", rev = "aff8e57003fbdb766f0b24c4acb4178e319d7fad" }
warp-mp-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "aff8e57003fbdb766f0b24c4acb4178e319d7fad" }
warp-rg-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "aff8e57003fbdb766f0b24c4acb4178e319d7fad" }
warp-fs-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "aff8e57003fbdb766f0b24c4acb4178e319d7fad" }
rfd = "0.10.0"
mime = "0.3.16"
names = "0.14.0"
titlecase = "2.2.1"
serde = "1.0.150"
serde_json = "1.0.89"
rand = "0.8.4"
image = "0.24.5"
chrono = "0.4.19"
substring = "1.4.5"
either = "1.6.1"
base64 = "0.20.0"
timeago = "0.4.0"
dirs = "4.0.0"
opener = "0.5.0"
rodio = "0.16"
open = "3.2.0"
wry = { version = "0.23.4" }
derive_more = "0.99"
colored = "2.0.0"

notify-rust = { version = "4.6.0", default-features = false, features = ["d"] }
once_cell = "1.13"

futures = "0.3"
tokio = { version = "1.23.0", features = ["full"] }
isolang = "2.2.0"
clap = { version = "4.0.32", features = ["derive"] }
fs_extra = "1.2.0"
walkdir = "2"

[features]
fullscreen = ["wry/fullscreen"]
transparent = ["wry/transparent"]
tray = ["wry/tray"]

[build-dependencies]
glob = "0.3.0"
rustc_version = "0.4.0"
rsass = "0.26.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"
core-foundation = "0.9.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
