[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "d521da1991719760e271457dfe4f9ddf281afbb3" }
dioxus-hooks = { git = "https://github.com/DioxusLabs/dioxus", rev = "d521da1991719760e271457dfe4f9ddf281afbb3" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus", rev = "d521da1991719760e271457dfe4f9ddf281afbb3" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev = "d521da1991719760e271457dfe4f9ddf281afbb3", features = [
    "transparent",
] }
raw-window-handle = "0.5.0"
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus", rev = "d521da1991719760e271457dfe4f9ddf281afbb3" }
fermi = { git = "https://github.com/DioxusLabs/dioxus", rev = "22e71a71bdcdc03c3ae83ae1c3b3fb5417ebaa80" }
kit = { path = "../kit" }
common = { path = "../common" }
extensions = { path = "../extensions" }
tokio-util = { version = "0.7", features = ["full"] }
arboard = "3.1.0"
humansize = "2.1.3"
window-vibrancy = "0.3.2"
uuid = { version = "1.0", features = ["serde", "v4"] }
libloading = "0.7.4"
warp = { git = "https://github.com/Satellite-im/Warp", branch = "fix/mp-update-overridden" }
warp-mp-ipfs = { git = "https://github.com/Satellite-im/Warp", branch = "fix/mp-update-overridden" }
warp-rg-ipfs = { git = "https://github.com/Satellite-im/Warp", branch = "fix/mp-update-overridden" }
warp-fs-ipfs = { git = "https://github.com/Satellite-im/Warp", branch = "fix/mp-update-overridden" }
rfd = "0.10.0"
mime = "0.3.16"
serde = "1.0.150"
serde_json = "1.0.89"
chrono = "0.4.19"
either = "1.6.1"
base64 = "0.20.0"
timeago = "0.4.0"
dirs = "4.0.0"
opener = "0.5.0"
open = "3.2.0"
wry = { version = "0.23.4" }
derive_more = "0.99"
colored = "2.0.0"
notify = "5.1.0"
rand = "0.8.4"
notify-rust = { version = "4.6.0", default-features = false, features = ["d"] }
titlecase = "2.2.1"

tempfile = "3.0.7"
fdlimit = "0.2"

once_cell = "1.13"

futures = "0.3"
tokio = { version = "1.23.0", features = ["full"] }
isolang = "2.2.0"
clap = { version = "4.0.32", features = ["derive"] }
fs_extra = "1.2.0"
walkdir = "2"

[features]
fullscreen = ["wry/fullscreen"]
transparent = ["wry/transparent"]
tray = ["wry/tray"]

[build-dependencies]
glob = "0.3.0"
rustc_version = "0.4.0"
rsass = "0.26.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"
core-foundation = "0.9.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
