[package]
name = "ui_kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop"] }
dioxus-heroicons = { git="https://github.com/Satellite-im/dioxus-heroicons" }
timeago = "0.4.0"
humansize = "2.0.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
glob = "0.3.0"
rsass = "0.26.0"
