[package]
name = "uplink_skeleton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop", "router"] }
ui_kit = { path = "../ui_kit" }
uuid = { version = "1.0", features = ["serde", "v4"] }
lipsum = "0.8.2"
warp = { git="https://github.com/Satellite-im/Warp.git", ref="master" }


[build-dependencies]
glob = "0.3.0"
rsass = "0.26.0"
