[package]
name = "clear_all"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = { workspace = true }
extensions = { workspace = true }
common = { workspace = true }
kit = { workspace = true }
once_cell = "1.17.1"