[package]
name = "emoji_selector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev="d521da1991719760e271457dfe4f9ddf281afbb3" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev = "d521da1991719760e271457dfe4f9ddf281afbb3", features = [
    "transparent",
] }
extensions = { path = "../../extensions" }
common = { path = "../../common" }
kit = { path = "../../kit" }
emojis = "0.5.2"
once_cell = "1.17.1"
uuid.workspace = true