[package]
name = "emoji_selector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = { workspace = true }
dioxus-desktop = { workspace = true }
extensions = { path = "../../extensions" }
common = { path = "../../common" }
kit = { path = "../../kit" }
emojis = "0.5.2"
once_cell = "1.17.1"
warp = { workspace = true}
uuid = { workspace = true }
futures = { workspace = true }