[package]
name = "emoji_selector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = { workspace = true }
dioxus-desktop = { workspace = true }
extensions = { workspace = true }
common = { workspace = true }
kit = { workspace = true }
emojis = "0.6"
once_cell = { workspace = true }
warp = { workspace = true}
uuid = { workspace = true }
futures = { workspace = true }
